[package]
name = "jcode-ide-integration"
version = "0.1.0"
edition = "2024"
publish = false

description = "IDE deep integration module for JCode - ported from Claude Code ide.ts, LSPClient.ts, useIDEIntegration.tsx"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP & WebSocket
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
dirs = "5"

# LSP (tower-lsp ecosystem)
tower-lsp = "0.20"
lsp-types = "0.95"

# Time
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
